--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			<div class="icon1"></div>
 			<div class="cta1">Add to your calendar</div>
 		</div>
+		<div class="mobileClear"></div>
 		<div class="date-button2">
 			<div class="icon2"></div>
 			<div class="cta2">Reply with a message</div>
