--- a/index.html
+++ b/index.html
@@ -64,15 +64,31 @@
 	</div>
 
 	<div class="date-buttonContainer">
-		<div class="date-button1">
-			<div class="icon1"></div>
-			<div class="cta1">Add to your calendar</div>
-		</div>
+		
+		<a href="www.google.com">	
+			<div class="date-button1">
+				<div class="icon1"></div>
+				<div class="cta1">Add to your calendar</div>
+			</div>
+		</a>
+		
+
 		<div class="mobileClear"></div>
-		<div class="date-button2">
-			<div class="icon2"></div>
-			<div class="cta2">Reply with a message</div>
-		</div>
+		
+		<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=naheelandaman@gmail.com" target="_blank" class="desktop-link">			
+			<div class="date-button2">
+				<div class="icon2"></div>
+				<div class="cta2">Reply with a message</div>
+			</div>
+		</a>
+
+		<a href="sms://+19172925554" class="mobile-link">				
+			<div class="date-button2">
+				<div class="icon2"></div>
+				<div class="cta2">Reply with a message</div>
+			</div>
+		</a>
+
 	</div>
 
 
