--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
 		<div class="mobileClear"></div>
 		
-		<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=naheelandaman@gmail.com" target="_blank" class="desktop-link">			
+		<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=naheelj.92@gmail.com,amanjeetkaurjassal@gmail.com" target="_blank" class="desktop-link">			
 			<div class="date-button2">
 				<div class="icon2"></div>
 				<div class="cta2">Reply with a message</div>
 			</div>
 		</a>
 
-		<a href="sms://+19172925554" class="mobile-link">				
+		<a href="sms:/open?addresses=+19172925554,+14087124871" class="mobile-link">				
 			<div class="date-button2">
 				<div class="icon2"></div>
 				<div class="cta2">Reply with a message</div>
