--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	<div class="date-buttonContainer">
 		
-		<a href="www.google.com">	
+		<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&tmsrc=naheelj.92%40gmail.com">	
 			<div class="date-button1">
 				<div class="icon1"></div>
 				<div class="cta1">Add to your calendar</div>
