--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -9,6 +9,7 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
+	<meta property="og:image" content="img/saveTheDate.png" />
 
 
 	<meta charset="utf-8">
@@ -65,6 +66,8 @@
 
 	<div class="date-buttonContainer">
 		
+		
+
 		<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&tmsrc=naheelj.92%40gmail.com">	
 			<div class="date-button1">
 				<div class="icon1"></div>
