--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		
 
-		<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&tmsrc=naheelj.92%40gmail.com">	
+		<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&amp;tmsrc=naheelj.92%40gmail.com">
 			<div class="date-button1">
 				<div class="icon1"></div>
 				<div class="cta1">Add to your calendar</div>
