--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		
 
-		<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&amp;tmsrc=naheelj.92%40gmail.com">
+		<a target="_blank" href="https://calendar.google.com/calendar/u/0/r/eventedit?dates=20220904/20220906&details=In+New+York,+NY+@+night%0ADetails+to+come+soon!&location=New+York&text=%F0%9F%97%BD%F0%9F%8E%89%F0%9F%92%8D+%5BSAVE+THE+DATE%5D+Naheel+%26+Aman%27s+Reception">
 			<div class="date-button1">
 				<div class="icon1"></div>
 				<div class="cta1">Add to your calendar</div>
