--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		
 
-		<a target="_blank" href="https://calendar.google.com/calendar/u/0/r/eventedit?dates=20220904/20220906&details=In+New+York,+NY+@+night%0ADetails+to+come+soon!&location=New+York&text=%F0%9F%97%BD%F0%9F%8E%89%F0%9F%92%8D+%5BSAVE+THE+DATE%5D+Naheel+%26+Aman%27s+Reception">
+		<a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220904%2F20220906&details=In%20New%20York%2C%20NY%20%40%20night%0ADetails%20to%20come%20soon%21&location=New%20York%2C%20NY&text=%F0%9F%97%BD%F0%9F%8E%89%F0%9F%92%8D%20%5BSAVE%20THE%20DATE%5D%20Naheel%20%26%20Aman%27s%20Reception">
 			<div class="date-button1">
 				<div class="icon1"></div>
 				<div class="cta1">Add to your calendar</div>
@@ -77,7 +77,7 @@
 		
 
 		<div class="mobileClear"></div>
-		
+
 		<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=naheelj.92@gmail.com,amanjeetkaurjassal@gmail.com" target="_blank" class="desktop-link">			
 			<div class="date-button2">
 				<div class="icon2"></div>
