--- a/14678.html
+++ b/14678.html
@@ -24,39 +24,10 @@
 </head>
 
 
-	<!--
-	<div class="date-header">
-		<div class="date-invitee">To: Esther Park (+1)</div>
-		<div class="date-buttons">
-			<div class="date-button-addToCal">
-				<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGlxdHA5dGI4cjE0c29iMDcydGdyZG44ajcgbmFoZWVsai45MkBt&tmsrc=naheelj.92%40gmail.com">Add to calendar</a>
-			</div>
-			<div class="date-button-message">
-				<a href="http://m.me/naheel.jawaid">Send us a message</a>
-			</div>
-		</div>
-	</div>
-
-
-
-	
-	<div class="invitation-name">
-		<span class="light">@</span>Esther Park (+1)
-	</div>
-
-
-	<div class="date-buttonContainer">
-		<div class="date-button1">button one</div>
-		<div class="date-button2">botton 222</div>
-	</div>
-
-
-	-->
-
 <div class="date-background">
 
 	<div class="invitation-name">
-		<span class="light">To</span> Esther Park +1
+		<span class="light">To</span> Jessie +1
 	</div>
 
 
