--- a/index.html
+++ b/index.html
@@ -53,47 +53,16 @@
 
 	-->
 
-<div class="date-background">
+<div class="date-background" style="background-color: #2E2D2C;">
 
-	<div class="invitation-name">
-		<span class="light">To</span> Esther Park +1
+	<div class="invitation-name" style="color: #949087;">
+		Still working on the full thing...
 	</div>
 
 
 	<div class="date-inviteCard">
-		<img src="img/saveTheDate.png">
+		<img src="img/loading.gif">
 	</div>
-
-	<div class="date-buttonContainer">
-		
-		
-
-		<a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220904%2F20220906&details=In%20New%20York%2C%20NY%20%40%20night%0ADetails%20to%20come%20soon%21&location=New%20York%2C%20NY&text=%F0%9F%97%BD%F0%9F%8E%89%F0%9F%92%8D%20%5BSAVE%20THE%20DATE%5D%20Naheel%20%26%20Aman%27s%20Reception">
-			<div class="date-button1">
-				<div class="icon1"></div>
-				<div class="cta1">Add to your calendar</div>
-			</div>
-		</a>
-		
-
-		<div class="mobileClear"></div>
-
-		<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=naheelj.92@gmail.com,amanjeetkaurjassal@gmail.com" target="_blank" class="desktop-link">			
-			<div class="date-button2">
-				<div class="icon2"></div>
-				<div class="cta2">Reply with a message</div>
-			</div>
-		</a>
-
-		<a href="sms:/open?addresses=+19172925554,+14087124871" class="mobile-link">				
-			<div class="date-button2">
-				<div class="icon2"></div>
-				<div class="cta2">Reply with a message</div>
-			</div>
-		</a>
-
-	</div>
-
 
 </div>
 
