--- a/24715.html
+++ b/24715.html
@@ -56,7 +56,7 @@
 <div class="date-background">
 
 	<div class="invitation-name">
-		<span class="light">To</span> Terrance & Joanna
+		<span class="light">To</span> Terrence & Joanna
 	</div>
 
 
